[Update][Validation]Fixed validation error code and alignment

--- a/src/pages/DoctorSignUp/style.scss
+++ b/src/pages/DoctorSignUp/style.scss
@@ -151,6 +151,10 @@
         width: 100%;
       }
 
+      .signin-btn-align {
+        padding-left: 20px !important;
+      }
+
       .signin-btn-wrap {
         font-size: 12px;
         padding: 7px 0;
